src/css/base/_base.scss
@use "../abstract/mixins";

*, *::before, *::after {
  box-sizing : border-box;
  }

body {
  font-size        : var(--default-font);
  line-height      : var(--line-height-m);
  color            : var(--color-Stone-600);
  background-color : var(--color-Stone-100);
  @include mixins.outfit-font();
  display          : flex;
  flex-direction   : column;
  justify-content  : center;
  align-items      : center;
  padding          : var(--clamp-spacing-y) var(--clamp-spacing-x);
  gap              : var(--spacing-100);;
  margin           : 0 auto;
  }

p {
  font-size   : var(--default-font);
  line-height : var(--line-height-m);
  color       : var(--color-Stone-600);
  @include mixins.outfit-font();
	
  }

h1 {
  margin-block-start : 0.063rem;
  color              : var(--color-Stone-900);
  font-size          : var(--font-40);
  line-height        : var(--line-height);
  @include mixins.young-serif-font();
  }

h2 {
  margin-block-start : 0.063rem;
  color              : var(--color-Brown-800);
  font-size          : var(--font-28);
  line-height        : var(--line-height);
  @include mixins.young-serif-font();
  }

h3 {
  font-size : var(--font-20);
  }

h3, h4, h5, h6 {
  margin-block-start : 0.063rem;
  line-height        : var(--line-height);
  color              : var(--color-Rose-800);
  @include mixins.outfit-font(600);
  }

figure {
  margin : 0;
  }

img {
  width         : 100%;
  height        : auto;
  border-radius : var(--border-radius-s);
  }

main {
  background-color : var(--color-White);
  padding          : var(--clamp-main-spacing);
  display          : flex;
  flex-direction   : column;
  justify-content  : flex-start;
  align-items      : center;
  width            : 100%;
  max-width        : 46rem;
  gap              : var(--spacing-500);
  border-radius    : var(--border-radius-l);
  }

ul, ol {
  color                : var(--color-Stone-600);
  margin-block-start   : 0;
  margin-block-end     : 0;
  padding-inline-start : var(--spacing-300);
  padding-inline-end   : var(--spacing-300);
  }

ul ::marker,
ol ::marker {
  color       : var(--color-Brown-800);
  font-weight : bold;
  }

hr {
  width            : 100%;
  height           : 1px;
  background-color : var(--color-Stone-150);
  border           : none;
  }
  

